--- a/css/style.css
+++ b/css/style.css
@@ -615,22 +615,22 @@ p.note{
 	text-decoration:underline;
 }
 /**** Grid 1_0f_4 ****/
-.grid_1_of_4{
+.grid_1_of_5{
 	display: block;
 	float:left;
 	margin: 1% 0 1% 1.6%;
 	box-shadow: 0px 0px 3px rgb(150, 150, 150);
 }
-.grid_1_of_4:first-child { 
+.grid_1_of_5:nth-child(4n+1) { 
 	margin-left: 0; 
 } 
-.images_1_of_4 {
+.images_1_of_5 {
 	width: 15.72%;
 	padding:1.5%;
 	text-align:center;
 	position:relative; 
 }
-.images_1_of_4  img{
+.images_1_of_5  img{
 	max-width:100%;
 }
 .discount{
@@ -646,40 +646,40 @@ p.note{
 	font-weight: bold;
 	line-height: 40px;
 }
-.images_1_of_4  h2 {
+.images_1_of_5  h2 {
 	color: #CC3636;
 	font-family: 'Monda', sans-serif;
 	font-size:0.9em;
 	font-weight : normal;
 }
-.images_1_of_4  p {
+.images_1_of_5  p {
 	font-size:0.8125em;
 	padding:0.4em 0;
 	color: #333;	
 }
-.images_1_of_4  p span.strike{
+.images_1_of_5  p span.strike{
 	font-size:18px;
 	font-family: 'Monda', sans-serif;
 	color:#444;
 	text-decoration:line-through;
 }
-.images_1_of_4  p span.price{
+.images_1_of_5  p span.price{
 	font-size:18px;
 	font-family: 'Monda', sans-serif;
 	color: #CC3636;
 	margin-left:15px;
 }
-.images_1_of_4 .button {
+.images_1_of_5 .button {
   float: left;
   line-height: 1.9em;
   margin-top: 0.3em;
   width: 100%;
 }
-.images_1_of_4 .button a{
+.images_1_of_5 .button a{
 		padding:7px 20px;
 		font-size:0.8em;
 }
-.images_1_of_4 .button a{
+.images_1_of_5 .button a{
 	font-family: "Trebuchet MS",Arial,Helvetica,sans-serif;
 	font-size: 14px;
 	line-height: 15px;
@@ -702,14 +702,14 @@ p.note{
 		-o-transition: all 0.5s ease;
 		transition: all 0.5s ease;
 }
-.images_1_of_4 .button a:hover{
+.images_1_of_5 .button a:hover{
      color:#70389C;
      background: #E8E8E8;
 }
-.images_1_of_4 .button span img{
+.images_1_of_5 .button span img{
 	position:absolute;
 }
-.images_1_of_4 .button a.cart-button{
+.images_1_of_5 .button a.cart-button{
 	padding:7px 5px 7px 38px; 
 }
 /*** Footer ***/
@@ -1570,7 +1570,7 @@ table.tblone img {
     .listview_1_of_2{
     	margin: 2.4% 0 0% 1.6%;
     }
-    .images_1_of_4 .button{
+    .images_1_of_5 .button{
     	width:100%;
     	margin-top:0.5em;
     }
@@ -1687,18 +1687,18 @@ p.terms {
     .listview_1_of_2{
     	margin: 1.4% 0 0% 1.6%;
     }
-    .images_1_of_4 .button{
+    .images_1_of_5 .button{
     	width:100%;
     	margin-top:0.5em;
     }
     .content_top {
     	padding:15px 5px;
     }
-    .images_1_of_4 h2 {
+    .images_1_of_5 h2 {
     	font-size:0.8em;
     	letter-spacing:0;
     }
-    .images_1_of_4 p span.strike,.images_1_of_4 p span.price {
+    .images_1_of_5 p span.strike,.images_1_of_5 p span.price {
     	font-size:18px;
     }
     .wrapper{
@@ -1976,15 +1976,15 @@ p.terms {
     .listview_1_of_2{
     	margin: 1.4% 0 0% 1.6%;
     }
-    .images_1_of_4 .button{
+    .images_1_of_5 .button{
     	width:100%;
     	margin-top:0.5em;
     }
-    .images_1_of_4 h2 {
+    .images_1_of_5 h2 {
     	font-size:1.2em;
     	letter-spacing:0;
     }
-    .images_1_of_4 p span.strike,.images_1_of_4 p span.price {
+    .images_1_of_5 p span.strike,.images_1_of_5 p span.price {
     	font-size:2em;
     }
     .wrapper{
@@ -2048,10 +2048,10 @@ p.terms {
 		width:96%;
 		padding:2% 0; 
 	}
-	.grid_1_of_4{ 
+	.grid_1_of_5{ 
 		margin: 2% 0 2% 0%;
 	}	
-	.images_1_of_4 {
+	.images_1_of_5 {
 		width:94%;
 		padding:3%;
 	}
@@ -2244,15 +2244,15 @@ p.terms {
     .listview_1_of_2{
     	margin:2% 0 0% 0%;
     }
-    .images_1_of_4 .button{
+    .images_1_of_5 .button{
     	width:100%;
     	margin-top:0.5em;
     }
-    .images_1_of_4 h2 {
+    .images_1_of_5 h2 {
     	font-size:1.2em;
     	letter-spacing:0;
     }
-    .images_1_of_4 p span.strike,.images_1_of_4 p span.price {
+    .images_1_of_5 p span.strike,.images_1_of_5 p span.price {
     	font-size:2em;
     }
    /*** Footer ***/
@@ -2333,10 +2333,10 @@ p.terms {
 		width:96%;
 		padding:2% 0; 
 	}
-	.grid_1_of_4{ 
+	.grid_1_of_5{ 
 		margin: 2% 0 2% 0%;
 	}	
-	.images_1_of_4 {
+	.images_1_of_5 {
 		width:94%;
 		padding:3%;
 	}
@@ -2445,10 +2445,10 @@ p.terms {
 		width:95%;
 		padding:2.5%;
 	}
-.grid_1_of_4{ 
+.grid_1_of_5{ 
 		margin:0% 0 0% 0%;
 	}	
-	.images_1_of_4 {
+	.images_1_of_5 {
 		width:95%;
 		padding:2.5%;
 	}
